# bt_api_ib_web

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: index.md
src/bt_api_ib_web/: __init__.py  exchange_data.py  plugin.py
src/bt_api_ib_web.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bt_api_ib_web/containers/ib/: __init__.py  _base.py  ib_account.py  ib_bar.py  ib_contract.py  ib_order.py  ib_position.py  ib_ticker.py  ib_trade.py
src/bt_api_ib_web/gateway/: __init__.py  adapter.py
src/bt_api_ib_web/runtime/: __init__.py  base_stream.py  browser_cookies.py  feed.py  session.py  stream.py
tests/: test_gateway_adapter.py  test_ib_account.py  test_ib_account_integration.py  test_ib_bar.py  test_ib_bar_integration.py  test_ib_contract.py  test_ib_contract_integration.py  test_ib_order.py  test_ib_order_integration.py  test_ib_position.py  test_ib_position_integration.py  test_ib_ticker.py  test_ib_ticker_integration.py  test_ib_trade.py  test_ib_trade_integration.py
tests/containers/exchanges/: test_ib_web_exchange_data.py
tests/containers/ib/: test_ib_account.py  test_ib_bar.py  test_ib_contract.py  test_ib_order.py  test_ib_position.py  test_ib_ticker.py  test_ib_trade.py
